--- a/bib/references.bib
+++ b/bib/references.bib
@@ -8,7 +8,7 @@
   year = {2022},
   doi = {10.3390/electronics11040662},
   abstract = {This study investigates 66 machine learning models to improve fraud detection, using a two-stage evaluation with stratified K-fold cross-validation on a European cardholder dataset. In the second stage, 19 resampling techniques are applied to top-performing algorithms from the first. The AllKNN-CatBoost combination achieves the best results, outperforming previous models with an AUC of 97.94%, Recall of 95.91%, and F1-Score of 87.40%.},
-  keywords = {credit card fraud, fraud detection, machine learning, CatBoost, XGBoost, random forest, class imbalance}
+  keywords = {type:technique, problem domain:credit card fraud detection, model type:ensemble, ml technique:CatBoost, ml technique:XGBoost, ml technique:random forest, data handling:class imbalance}
 }
 
 @article{Bakhtiari2023EnsembleData,
@@ -20,7 +20,7 @@
   year = {2023},
   doi = {10.1007/s11042-023-14698-2},
   abstract = {This study applies ensemble learning techniques, specifically LightGBM and LiteMORT, to credit card fraud detection. The models are combined using simple and weighted averaging methods, achieving high accuracy and efficiency across multiple evaluation metrics including AUC and F1-score.},
-  keywords = {Credit card, Fraud detection, Boosting, Ensemble learning, LiteMORT, LightGBM}
+  keywords = {type:technique, problem domain:credit card fraud detection, model type:ensemble, ml technique:LightGBM, ml technique:LiteMORT, evaluation:auc, evaluation:f1-score}
 }
 
 @article{Carcillo2019HybridLearning,
@@ -28,9 +28,9 @@
   author = {Carcillo, Fabrizio and Le Borgne, Yann-Aël and Caelen, Olivier and Kessaci, Yacine and Oblé, Frédéric and Bontempi, Gianluca},
   journal = {Preprint - Special Issue on Business Analytics Emerging Trends and Challenges},
   year = {2019},
-  doi = { 10.1016/j.ins.2019.05.042},
+  doi = {10.1016/j.ins.2019.05.042},
   abstract = {This paper presents a hybrid model that integrates unsupervised outlier detection scores with supervised learning to enhance credit card fraud detection. The method is validated on a real-world dataset and shown to improve detection accuracy.},
-  keywords = {Fraud Detection, Ensemble Learning, Outlier Detection, Semi-supervised Learning, Contextual Outlier Detection}
+  keywords = {type:technique, problem domain:credit card fraud detection, model type:hybrid model, ml technique:outlier detection, ml technique:ensemble, ml technique:semi-supervised learning}
 }
 
 @article{DalPozzolo2018Realistic,
@@ -43,7 +43,7 @@
   year = {2018},
   doi = {10.1109/TNNLS.2017.2736643},
   abstract = {The paper proposes a realistic modeling of credit card fraud detection systems by addressing concept drift, class imbalance, and verification latency. A novel learning strategy is introduced and evaluated using a real-world stream of over 75 million transactions. The study emphasizes realistic performance measures and feedback-based model training.},
-  keywords = {Concept drift, Credit card fraud detection, Learning in nonstationary environments, Unbalanced classification}
+  keywords = {type:technique, problem domain:credit card fraud detection, data handling:concept drift, data handling:class imbalance, data handling:verification latency, model type:incremental learning}
 }
 
 @article{Ganji2023SSPO,
@@ -56,7 +56,7 @@
   year = {2023},
   doi = {10.1002/cpe.7666},
   abstract = {This paper introduces the Shuffled Shepherd Political Optimization-based Deep Residual Network (SSPO-based DRN) for detecting credit card fraud. The method integrates Political Optimization and Shuffled Shepherd Optimization for efficient training. Techniques such as quantile normalization, Fisher score, and class information gain are used for preprocessing and feature selection. Data augmentation further enhances detection accuracy.},
-  keywords = {deep residual network, political optimization approach, quantile normalization, shuffled shepherd optimization algorithm}
+  keywords = {type:technique, problem domain:credit card fraud detection, model type:deep learning, ml technique:deep residual network, optimization technique:political optimization, optimization technique:shepherd optimization, data handling:data augmentation, data handling:feature selection, feature selection:Fisher score, feature selection:class information gain}
 }
 
 @article{Khalid2024Ensemble,
@@ -69,7 +69,7 @@
   year = {2024},
   doi = {10.3390/bdcc8010006},
   abstract = {This paper presents an ensemble machine learning model integrating SVM, KNN, Random Forest, Bagging, and Boosting classifiers to detect credit card fraud. Techniques such as under-sampling and SMOTE are employed to handle dataset imbalance. The ensemble outperforms individual models across multiple metrics, providing a robust framework for real-world fraud detection.},
-  keywords = {credit card fraud detection, ensemble model, machine learning, data imbalance, Synthetic Minority Over-sampling Technique, deep learning}
+  keywords = {type:application, problem domain:credit card fraud detection, model type:ensemble, ml technique:random forest, ml technique:SVM, ml technique:KNN, ml technique:bagging, ml technique:boosting, data handling:undersampling, data handling:SMOTE, evaluation:accuracy, evaluation:precision, evaluation:recall, evaluation:f1-score}
 }
 
 @article{Kim2019Champion,
@@ -81,7 +81,7 @@
   year = {2019},
   doi = {10.1016/j.eswa.2019.03.042},
   abstract = {This study proposes a champion-challenger analysis framework to compare hybrid ensemble and deep learning models for credit card fraud detection. Evaluated on real-world transaction datasets, the deep learning challenger outperformed the hybrid ensemble champion model across offline and post-launch tests. The approach considers real-world constraints such as investigation limits and asymmetric misclassification costs.},
-  keywords = {Credit card fraud detection, Deep learning, Hybrid ensemble, Model evaluation, Class imbalance}
+  keywords = {type:evaluation, problem domain:credit card fraud detection, model type:hybrid ensemble, model type:deep learning, evaluation:offline test, evaluation:post-launch test, evaluation:cost-sensitive, data handling:investigation limit}
 }
 
 @article{Rtayli2020SVMRFE,
@@ -94,7 +94,7 @@
   doi = {10.1016/j.jisa.2020.102596},
   url = {https://doi.org/10.1016/j.jisa.2020.102596},
   abstract = {This paper proposes a hybrid model for credit card fraud detection that combines Recursive Feature Elimination (RFE), Hyper-Parameters Optimization (HPO) using GridSearchCV, and Synthetic Minority Oversampling Technique (SMOTE). The proposed model uses Support Vector Machine and Random Forest classifiers, aiming to improve classification performance by selecting the most predictive features and addressing the class imbalance issue. Experimental results on real-world datasets demonstrate enhanced effectiveness in fraud detection.},
-  keywords = {credit card fraud detection, imbalanced data, machine learning, hyperparameters optimization, recursive feature elimination, synthetic minority oversampling technique}
+  keywords = {type:technique, problem domain:credit card fraud detection, model type:hybrid model, feature selection:RFE, optimization technique:grid search, ml technique:SVM, ml technique:random forest, data handling:SMOTE}
 }
 
 @article{Singh2022CSWLB,
@@ -107,7 +107,7 @@
   year = {2022},
   doi = {10.1111/coin.12555},
   abstract = {This article proposes an efficient cost-sensitive weak learner approach with a bagging and random forest classifier (CSWLB) to minimize misclassification problems and overcome the class imbalance issue. The CSWLB combines cost-sensitive learning and ensemble methods to reweight fraudulent transactions and apply classifiers on generated weight bags. Experiments using the Brazilian credit card dataset demonstrate the model’s superior performance.},
-  keywords = {bagging, cost-sensitive learning, credit card fraud detection, ensemble, sampling, weak learner}
+  keywords = {type:technique, problem domain:credit card fraud detection, model type:ensemble, ml technique:bagging, ml technique:cost-sensitive learning, data handling:class imbalance, ml technique:random forest}
 }
 
 @article{Voican2021Deep,
@@ -121,5 +121,5 @@
   doi = {10.24818/issn14531305/25.1.2021.06},
   url = {https://www.researchgate.net/publication/350494279_Credit_Card_Fraud_Detection_Using_Deep_Learning_Techniques},
   abstract = {This paper proposes a deep learning-based model to identify credit card fraud by understanding and learning the behavioral patterns of users. By leveraging neural networks trained on real transactional data with one-hot encoding, the model aims to detect impostor behavior in a highly dynamic online environment. The study highlights the importance of user-specific transaction habits and demonstrates how deep learning techniques can efficiently capture complex fraud indicators.},
-  keywords = {Artificial Intelligence, Credit Card Fraud, Deep Learning, Neural Network Model, User Behavior}
+  keywords = {type:application, problem domain:credit card fraud detection, model type:deep learning, ml technique:neural networks, ml technique:one-hot encoding, data handling:user behavior modeling}
 }
